Upgrade to Shadow Plugin 9.0.2